--- a/branching_xblock/static/html/branching_xblock_edit.html
+++ b/branching_xblock/static/html/branching_xblock_edit.html
@@ -1,2 +1,3 @@
-<div class="branching-scenario-editor"></div>
-<div class="errors" style="color: red;"></div>
+<div class="branching-scenario-editor">
+    <div class="errors" style="color: red;"></div>
+</div>
