fix: update settings in the end using studio submit

--- a/branching_xblock/static/html/branching_xblock_edit.html
+++ b/branching_xblock/static/html/branching_xblock_edit.html
@@ -1,3 +1,22 @@
-<div class="branching-scenario-editor">
-    <div class="errors" style="color: red;"></div>
+<div class="wrapper-comp-settings is-active editor-with-buttons">
+  <!-- Editor UI placeholder -->
+  <div class="branching-scenario-editor"></div>
+
+  <!-- Error messages get injected here -->
+  <div class="errors" style="color:red;"></div>
+
+  <div class="xblock-actions">
+    <ul>
+      <li class="action-item">
+        <button type="button" class="button action-primary save-button">
+          Save
+        </button>
+      </li>
+      <li class="action-item">
+        <button type="button" class="button cancel-button">
+          Cancel
+        </button>
+      </li>
+    </ul>
+  </div>
 </div>
