fix: improve styling

--- a/branching_xblock/static/html/branching_xblock.html
+++ b/branching_xblock/static/html/branching_xblock.html
@@ -4,7 +4,7 @@
         <div class="node-media" data-role="media"></div>
         <div class="choices" data-role="choices"></div>
 
-        <button class="undo-button" data-role="undo" style="display: none;">Undo Last Choice</button>
+        <button class="undo-button action-secondary" data-role="undo" style="display: none;">Undo</button>
 
         <div class="score-display" data-role="score" style="display: none;"></div>
     </div>
