--- a/branching_xblock/static/html/branching_xblock_edit.html
+++ b/branching_xblock/static/html/branching_xblock_edit.html
@@ -4,19 +4,9 @@
 
   <!-- Error messages get injected here -->
   <div class="errors" style="color:red;"></div>
+</div>
 
-  <div class="xblock-actions">
-    <ul>
-      <li class="action-item">
-        <button type="button" class="button action-primary save-button">
-          Save
-        </button>
-      </li>
-      <li class="action-item">
-        <button type="button" class="button cancel-button">
-          Cancel
-        </button>
-      </li>
-    </ul>
-  </div>
+<div class="xblock-actions">
+  <button type="button" class="action-primary save-button">Save</button>
+  <button type="button" class="action-secondary cancel-button">Cancel</button>
 </div>
