fix: use handlebars + add hints

--- a/branching_xblock/static/html/branching_xblock.html
+++ b/branching_xblock/static/html/branching_xblock.html
@@ -2,6 +2,7 @@
     <div class="active-scenario" data-role="active">
         <div class="node-content" data-role="content"></div>
         <div class="node-media" data-role="media"></div>
+        <div data-role="hint" class="node-hint" style="display:none;"></div>
         <div class="choices" data-role="choices"></div>
 
         <button class="undo-button action-secondary" data-role="undo" style="display: none;">Undo</button>
