--- a/branching_xblock/static/html/branching_xblock.html
+++ b/branching_xblock/static/html/branching_xblock.html
@@ -2,10 +2,12 @@
     <div class="active-scenario" data-role="active">
         <div class="node-content" data-role="content"></div>
         <div class="node-media" data-role="media"></div>
-        <div data-role="hint" class="node-hint" style="display:none;"></div>
+        <div data-role="hint" class="node-hint mx-3 px-2 py-3" style="display:none;"></div>
         <div class="choices" data-role="choices"></div>
 
-        <button class="undo-button action-secondary" data-role="undo" style="display: none;">Undo</button>
+        <button class="undo-button action-secondary btn-secondary" data-role="undo" style="display: none;">
+            <i class="fa fa-undo" aria-hidden="true"></i>&nbsp;Undo
+        </button>
 
         <div class="score-display" data-role="score" style="display: none;"></div>
     </div>
