--- a/branching_xblock/static/html/branching_xblock_edit.html
+++ b/branching_xblock/static/html/branching_xblock_edit.html
@@ -1,2 +1,12 @@
-<div class="branching-scenario-editor"></div>
-<div class="errors" style="color: red;"></div>
+<div class="wrapper-comp-settings is-active editor-with-buttons">
+  <!-- Editor UI placeholder -->
+  <div class="branching-scenario-editor"></div>
+
+  <!-- Error messages get injected here -->
+  <div class="errors" style="color:red;"></div>
+</div>
+
+<div class="xblock-actions">
+  <button type="button" class="action-primary save-button">Save</button>
+  <button type="button" class="action-secondary cancel-button">Cancel</button>
+</div>
