--- a/branching_xblock/static/html/branching_xblock_edit.html
+++ b/branching_xblock/static/html/branching_xblock_edit.html
@@ -6,7 +6,7 @@
   <div class="errors" style="color:red;"></div>
 </div>
 
-<div class="xblock-actions">
+<div class="xblock-actions" style="position: sticky; bottom: 0; z-index: 10; box-shadow: 0 -2px 6px rgba(0, 0, 0, 0.05); background: #fff;">
   <button type="button" class="action-primary save-button">Save</button>
   <button type="button" class="action-secondary cancel-button">Cancel</button>
 </div>
