--- a/branching_xblock/static/html/branching_xblock.html
+++ b/branching_xblock/static/html/branching_xblock.html
@@ -16,7 +16,7 @@
             <form class="choices-form" data-role="choice-form">
                 <div class="choices-list" data-role="choice-list"></div>
                 <div class="choice-actions">
-                    <button type="button" class="undo-button action-secondary btn-secondary" data-role="undo" style="display: none;">
+                    <button type="button" class="undo-button action-secondary btn-secondary" data-role="undo">
                         Go Back
                     </button>
                     <button type="submit" class="choice-submit-button action-primary" data-role="submit-choice" disabled>
