feat: Add transcript url option

--- a/branching_xblock/static/html/branching_xblock.html
+++ b/branching_xblock/static/html/branching_xblock.html
@@ -2,6 +2,7 @@
     <div class="active-scenario" data-role="active">
         <div class="node-content" data-role="content"></div>
         <div class="node-media" data-role="media"></div>
+        <div class="transcript-link" data-role="transcript" hidden></div>
         <div class="node-hint-container" data-role="hint-container">
             <details class="hint-collapsible" data-role="hint-collapsible" hidden>
                 <summary class="hint-summary" data-role="hint-summary">
