refactor: replace hint settings with reset option

--- a/branching_xblock/static/html/branching_xblock.html
+++ b/branching_xblock/static/html/branching_xblock.html
@@ -19,6 +19,9 @@
                     <button type="button" class="undo-button action-secondary btn-secondary" data-role="undo">
                         Go Back
                     </button>
+                    <button type="button" class="reset-button action-secondary btn-secondary" data-role="reset-activity" style="display: none;">
+                        Reset Activity
+                    </button>
                     <button type="submit" class="choice-submit-button action-primary" data-role="submit-choice" disabled>
                         Submit
                     </button>
