--- a/branching_xblock/static/html/branching_xblock_edit.html
+++ b/branching_xblock/static/html/branching_xblock_edit.html
@@ -1,12 +1,14 @@
 <div class="wrapper-comp-settings is-active editor-with-buttons">
-  <!-- Editor UI placeholder -->
-  <div class="branching-scenario-editor"></div>
+  <div class="branching-editor-step" data-role="step-settings"></div>
+  <div class="branching-editor-step" data-role="step-nodes" hidden></div>
 
   <!-- Error messages get injected here -->
   <div class="errors" style="color:red;"></div>
 </div>
 
 <div class="xblock-actions">
-  <button type="button" class="action-primary save-button">Save</button>
-  <button type="button" class="action-secondary cancel-button">Cancel</button>
+  <button type="button" class="action-primary" data-role="continue">Continue</button>
+  <button type="button" class="action-primary" data-role="save" hidden>Save</button>
+  <button type="button" class="action-secondary" data-role="back" hidden>Back</button>
+  <button type="button" class="action-secondary" data-role="cancel">Cancel</button>
 </div>
