feat: replace hint settings with reset option

--- a/branching_xblock/static/html/branching_xblock.html
+++ b/branching_xblock/static/html/branching_xblock.html
@@ -14,7 +14,10 @@
         <div class="choices" data-role="choices"></div>
 
         <button class="undo-button action-secondary btn-secondary" data-role="undo" style="display: none;">
-            <i class="fa fa-undo" aria-hidden="true"></i>&nbsp;Undo
+            Go Back
+        </button>
+        <button type="button" class="reset-button action-secondary btn-secondary" data-role="reset-activity" style="display: none;">
+            Reset
         </button>
 
         <div class="score-display" data-role="score" style="display: none;"></div>
