fix: update styling

--- a/branching_xblock/static/html/branching_xblock.html
+++ b/branching_xblock/static/html/branching_xblock.html
@@ -13,12 +13,14 @@
         </div>
         <div class="choices" data-role="choices"></div>
 
-        <button class="undo-button action-secondary btn-secondary" data-role="undo" style="display: none;">
-            Go Back
-        </button>
-        <button type="button" class="reset-button action-secondary btn-secondary" data-role="reset-activity" style="display: none;">
-            Reset
-        </button>
+        <div class="action-row">
+            <button class="undo-button action-secondary btn-secondary" data-role="undo" style="display: none;">
+                Go Back
+            </button>
+            <button type="button" class="reset-button action-secondary btn-secondary" data-role="reset-activity" style="display: none;">
+                Reset
+            </button>
+        </div>
 
         <div class="score-display" data-role="score" style="display: none;"></div>
     </div>
